Updated div selectors to match new microbial maps page

--- a/microsetta_interface/templates/new_results_page.jinja2
+++ b/microsetta_interface/templates/new_results_page.jinja2
@@ -215,7 +215,7 @@
               '/emperor?metadata_categories=country'
         buildPlotlyEmperor(state,
                            url,
-                           "micromap1", //contents inserted into div name
+                           "pcoa-tmi-all-samples", //contents inserted into div name
                            "All of the Microsetta Initiative")
 
         //Plot 2, plot country from multipop-datatype-sampletype
@@ -225,7 +225,7 @@
               '/emperor?metadata_categories=country'
         buildPlotlyEmperor(state,
                            url,
-                           "micromap2", //contents inserted into div name
+                           "pcoa-multipopulation", //contents inserted into div name
                            "Multipopulation")
 
 
@@ -236,7 +236,7 @@
               '/emperor?metadata_categories=country'
         buildPlotlyEmperor(state,
                            url,
-                           "micromap3", //contents inserted into div name
+                           "pcoa-builtenv", //contents inserted into div name
                            "You and the Microbes Around You")
     }
 
