Changed default dataset when there are no datasets containing sample

--- a/microsetta_interface/templates/new_results_page.jinja2
+++ b/microsetta_interface/templates/new_results_page.jinja2
@@ -248,7 +248,7 @@
                 if (data.length === 0)
                 {
                     //Ack, this sample isn't in any datasets, pick one arbitrarily.
-                    state.dataset_input.value = "tmi-WGS-allsamples"
+                    state.dataset_input.value = "tmi-WGS-gut"
                     return
                 }
 
