Removed plotly tick labels and lines at zero

--- a/microsetta_interface/templates/new_results_page.jinja2
+++ b/microsetta_interface/templates/new_results_page.jinja2
@@ -171,11 +171,16 @@
                     title: {
                         text: 'Principal Component 1'
                     },
+                    showticklabels: false,
+                    zeroline: false
+
                 },
                 yaxis: {
                     title: {
                         text: 'Principal Component 2'
                     },
+                    showticklabels: false,
+                    zeroline: false
                 },
                 "hovermode": false
             };
